--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
       <!-- garden_about  -->
 
       <div class="garden_about ">
-        <p
+        <h3
           class="garden_about_title d-flex justify-content-center align-items-center align-self-center text-center text-black  ">
-          About</p>
+          About</h3>
         <div class="garden_about_img ">
 
         </div>
         <div class="garden_about_text">
-          <p class="garden_about_textup">廣袤視野</p>
+          <h3 class="garden_about_textup">廣袤視野</h3>
           <p>
             沐心泉腹地遼闊，總面積超過八公頃，置身在餐廳平台，放眼望去盡是滿山翠綠的原始林木，農場位於600至900公尺的高海拔山上，至高點上向南可望酒桶山，西可遠眺台中港，東看大雪山，而農場東側與大甲溪河床約有300多公尺的落差，其遼闊的景緻不亞於站在台北101俯看台北市。
             <br><br>
@@ -79,7 +79,7 @@
       <div class="garden_view">
         <div class="garden_view_cloud row">
           <div class="garden_view_mountain_text col-lg-6 col-md-6 text-dark align-self-center">
-            <p>雲海山間</p>
+            <h3>雲海山間</h3>
             <p>
               農場位於層層山巒之上，清晨觀日出，看那第一道曙光的活力；黃昏看夕陽，看那滿天彩霞的柔媚，佇足在峰頂，時見山間雲海起伏。
             </p>
@@ -89,8 +89,8 @@
           </div>
         </div>
         <div class="garden_view_mountain row">
-          <div class="garden_view_mountain_text col-12 col-md-6 text-dark order-2 align-self-center">
-            <p>山林景緻</p>
+          <div class="garden_view_mountain_text col-md-6 text-dark order-2 align-self-center">
+            <h3>山林景緻</h3>
             <p>
               是一番幸福，溫婉的鳥鳴，尤其是那竹雞”雞格乖,雞格乖…”的叫聲更是可愛，還有大甲溪的潺潺流水聲，聽那大自然美妙的天籟之音，能洗滌心靈，讓人無限舒暢。
               <br>
@@ -102,7 +102,7 @@
         </div>
         <div class="garden_view_season row">
           <div class="col-lg-6 col-md-6 align-self-center">
-            <p>四季花海</p>
+            <h3>四季花海</h3>
             <p>
               4米寬的平坦道路，道路兩側除了原有的嫩草鮮花與長年老木外，更有櫻花、杜鵑、野百合、薰衣草、楓樹、金針花、油花、風蔴木、黃金花…滿山遍地的盛放。
               <br>
@@ -124,12 +124,12 @@
 
       <div class="garden_walks">
 
-        <div class="garden_walks_text text-center col-12 col-lg-6 col-md-6 text-dark">
+        <div class="garden_walks_text text-center col-lg-6 col-md-6 text-dark">
 
-          <p>花間步道</p>
+          <h3>花間步道</h3>
 
         </div>
-        <div class="garden_walks_img col-12 col-lg-6 col-md-6 order-md-0  ">
+        <div class="garden_walks_img col-lg-6 col-md-6 order-md-0  ">
           <img width="100%" src="https://picsum.photos/1000/800?random=5" alt="">
         </div>
 
@@ -139,8 +139,8 @@
       <div class="garden_info">
         <div class="garden_info_text">
           <div class="garden_info_text_up text-center">
-            <div class="garden_info_text_up_en text-center">Information</div>
-            <div class="garden_info_text_up_zh text-center">園區營業資訊</div>
+            <h3 class="garden_info_text_up_en text-center">Information</h3>
+            <h3 class="garden_info_text_up_zh text-center">園區營業資訊</h3>
           </div>
           <div class="garden_info_text_down">
             <p>
@@ -158,54 +158,55 @@
         </div>
         <div class="garden_info_card row ">
 
-          <div class="garden_info_card_dining col-lg-6 col-md-4 px-md-2 ">
+          <div class="garden_info_card_dining col-lg-6 col-md-4  ">
             <img width="100%" src="https://picsum.photos/1000/800?random=4" alt="">
-            <p class="garden_info_card_text text-center">餐 廳</p>
+            <h3 class="garden_info_card_text text-center">餐 廳</h3>
             <p class="mt-2 p-2 cardC_txt ">新社美食遠近馳名，其中又以新社沐心泉休閒農場附設餐廳部最為知名。
               <br><br>
               餐廳主人為您預備了精心烹飪的餐點，新鮮的食材，在山林之中和著鳥叫聲的清脆，絕佳的景色與氣氛，在群山環花包圍下，將新社的山、新社的水，新社最美的景色呈現在您眼前。</p>
           </div>
-          <div class="garden_info_card_Camp col-lg-6 col-md-4 px-md-2 ">
+          <div class="garden_info_card_Camp col-lg-6 col-md-4  ">
             <img width="100%" src="https://picsum.photos/1000/800?random=3" alt="">
-            <p class="garden_info_card_text text-center">露營區</p>
+            <h3 class="garden_info_card_text text-center">露營區</h3>
             <p class="mt-2 p-2 cardC_txt ">Lorem ipsum dolor sit amet consectetur
               天然美景，入秋露營的好去處，在大自然裡享受露營的樂趣；山嵐飄渺、壯麗雲海、迷醉的夕陽景色，彷彿置身魔幻仙境的感受！
               <br><br>
               * 2~3月有櫻花，4~5月有油桐花、螢火蟲，5~8月有金針花，12月有白雪木，四季各自美麗。
             </p>
           </div>
-          <div class="garden_info_card_button">
-            <a href="#">
-              <button type="button" class="btn btn-outline-primary">了解更多</button>
-            </a>
+
+        </div>
+        <div class="garden_info_card_button text-center">
+          <a href="#">
+            <button type="button " class="btn btn-outline-primary"><h3>了解更多</h3> </button>
+          </a>
+        </div>
+        <div class="garden_info_dining text-center">
+          <h3>Dining</h3>
+        </div>
+        <div class="garden_info_dining_img row">
+          <div class="garden_info_dining_img_1 col-lg-2 col-md-2 px-md-4 ">
+            <img src="https://picsum.photos/150/150?random=6" alt="">
           </div>
+          <div class="garden_info_dining_img_2 col-lg-2 col-md-2 px-md-4 ">
+            <img src="https://picsum.photos/150/150?random=7" alt="">
+          </div>
+          <div class="garden_info_dining_img_3 col-lg-2 col-md-2 px-md-4 ">
+            <img src="https://picsum.photos/150/150?random=8" alt="">
+          </div>
+          <div class="garden_info_dining_img_4 col-lg-2 col-md-2 px-md-4 ">
+            <img src="https://picsum.photos/150/150?random=9" alt="">
+          </div>
+          <div class="garden_info_dining_img_5 col-lg-2 col-md-2 px-md-4 ">
+            <img src="https://picsum.photos/150/150?random=10" alt="">
+          </div>
+          <div class="garden_info_dining_img_6 col-lg-2 col-md-2 px-md-4 ">
+            <img src="https://picsum.photos/150/150?random=11" alt="">
+          </div>
+
+
         </div>
 
-        <div class="garden_info_img">
-
-        </div>
-
-
-      </div>
-      <div class="garden_info_dining_img row">
-        <div class="garden_info_dining_img_1 col-lg-2 col-md-2 px-md-4 ">
-          <img src="https://picsum.photos/150/150?random=6" alt="">
-        </div>
-        <div class="garden_info_dining_img_2 col-lg-2 col-md-2 px-md-4 ">
-          <img src="https://picsum.photos/150/150?random=7" alt="">
-        </div>
-        <div class="garden_info_dining_img_3 col-lg-2 col-md-2 px-md-4 ">
-          <img src="https://picsum.photos/150/150?random=8" alt="">
-        </div>
-        <div class="garden_info_dining_img_4 col-lg-2 col-md-2 px-md-4 ">
-          <img src="https://picsum.photos/150/150?random=9" alt="">
-        </div>
-        <div class="garden_info_dining_img_5 col-lg-2 col-md-2 px-md-4 ">
-          <img src="https://picsum.photos/150/150?random=10" alt="">
-        </div>
-        <div class="garden_info_dining_img_6 col-lg-2 col-md-2 px-md-4 ">
-          <img src="https://picsum.photos/150/150?random=11" alt="">
-        </div>
       </div>
 
 
@@ -218,8 +219,8 @@
   </main>
 
   <!-- footer -->
-  <footer class="text-center">
-    <span class="footer_text p-5 ">此頁面內容僅為全端與Python資訊探勘工程師養成班使用</span>
+  <footer class="garden_footer text-center">
+    <span class="garden_footer_text p-5 ">此頁面內容僅為全端與Python資訊探勘工程師養成班使用</span>
   </footer>
 
 
