--- a/當季活動/index.html
+++ b/當季活動/index.html
@@ -10,94 +10,149 @@
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="./css//april.css">
+    <link rel="stylesheet" href="./css/april.css">
 </head>
 
 <body>
 
     <main>
 
-        <div class="container">
 
-            <!-- banner -->
-            <div class="april_banner">
-                <div class="april_banner_content col-lg-12">
-                    <div class="april_banner_text">
-                        <div class="april_banner_text_title">森林螢光微旅</div>
-                        <div class="april_banner_text_subtitle">Snow and Stars</div>
+
+        <!-- banner -->
+        <div class="april_banner">
+            <div class="april_banner_content col-lg-12 ">
+                <div class="april_banner_text">
+                    <div class="april_banner_text_title text-center">森林螢光微旅</div>
+                    <div class="april_banner_text_subtitle">Snow and Stars</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="april_woods container">
+            <div class="april_woods_middle col-lg-6 col-md-6 col-6 m-auto">
+            </div>
+            <div class="april_woods_left col-lg-4 col-md-4 col-4">
+            </div>
+            <div class="april_woods_square col-md-3 col-3">
+            </div>
+            <div class="april_woods_right">
+                <div class="april_woods_right_title">
+                    <h2>INTO THE<br>WOODS</h2>
+                </div>
+                <div class="april_woods_right_content">
+                    <p>聆聽森林、油桐花與螢光交織出的旅途協奏曲。</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="april_2block_top d-flex">
+            <div class="april_2block_top_left col-lg-6">
+
+            </div>
+            <div class="april_2block_top_right col-lg-6">
+
+            </div>
+
+        </div>
+
+        <div class="april_700m d-flex justify-content-center align-items-center">
+            <div class="april_700m_box container">
+                <div class="april_700m_squareleft col-lg-8 col-md-4 col-4"></div>
+                <div class="april_700m_mainimg ">
+                    <div class="april_700m_content ">
+                        <div class="april_700m_content_title">
+                            <h2>700m above</h2>
+                        </div>
+                        <div class="april_700m_content_down">
+                            <h2> sea level</h2>
+                            <p>走入海拔700公尺的生態環境，<br>
+                                用感官感受多元富饒的生命力，<br>
+                                在森林裡找一角，<br>
+                                享受難得靜下來的無聲晚餐，<br>
+                                寫一封明信片給未來的自己，<br>
+                                紀念你暫時脫離匆匆忙忙的都市步伐。</p>
+                        </div>
                     </div>
+
+                    <div class="april_700m_squarerighttop col-md-4 col-3"></div>
+                    <div class="april_700m_squarerightbottomAleft col-md-4 col-md-3 col-2"></div>
+                    <div class="april_700m_squarerightbottomBright col-md-3 col-2"></div>
                 </div>
 
             </div>
+        </div>
 
-            <div class="april_woods ">
-                <div class="april_woods_middle ">
-                    <img src="https://picsum.photos/1000/800?random=2" alt="">
-                </div>
-                <div class="april_woods_left">
-                    <img src="https://picsum.photos/1000/800?random=3" alt=""></div>
-                <div class="april_woods_right">
-                    <h2>INTO THE</h2>
-                    <h2>WOODS</h2>
-                    <span>聆聽森林、油桐花與螢光交織出的旅途協奏曲。</span>
-                </div>
-            </div>
 
-            <div class="april_2block_top">
-
-            </div>
-
-            <div class="april_700m">
-                <div class="april_700m_content">
-                    <h2>700m above</h2>
-                    <h2>sea level</h2>
-                    <span>走入海拔700公尺的生態環境，<br>
-                        用感官感受多元富饒的生命力，<br>
-                        在森林裡找一角，<br>
-                        享受難得靜下來的無聲晚餐，<br>
-                        寫一封明信片給未來的自己，<br>
-                        紀念你暫時脫離匆匆忙忙的都市步伐。</span>
-                </div>
-            </div>
-
-            <div class="april_may_title">
+        <div class="april_may container">
+            <div class="april_may_title text-center">
                 <h2>APRIL to MAY</h2>
             </div>
-
-            <div class="april_may d-flex justify-content-center">
-                <div class="april_may_content april_may_middle col-lg-6"></div>
-                <div class="april_may_content april_may_left col-lg-4"></div>
-                <div class="april_may_content april_may_right col-lg-5">
-                    <div class="april_may_right_img"></div>
-                    <span></span>
+            <div class="april_may_content">
+                <div class="april_may_middle col-6 m-auto">
                 </div>
 
+                <div class="april_may_left col-lg-5 ">
+                </div>
+                <div class="april_may_left_content">
+                    <p>Spring Mountain</p>
+                </div>
+
+                <div class="april_may_right col-lg-4">
+                </div>
+                <div class="april_may_right_content">
+                    <p>春夏交替之際，<br>
+                        每當微風輕揚，<br>
+                        油桐花旋轉落下彷彿飛雪翩翩，<br>
+                        翠綠山頭染成遍地雪白。</p>
+                </div>
             </div>
-
-            <div class="april_2block_bottum">
-
-            </div>
-
-            <div class="april_stay">
-                <span>待夜幕低垂，滿天星子之下，點點螢光熠熠飛舞。</span>
-            </div>
-
-            <div class="april_party">
-                <h3>We invite you to join the spring party.</h3>
-            </div>
-
-            <div class="april_snow">
-
-            </div>
-
 
         </div>
 
 
 
+        <div class="april_2block_bottum d-flex">
+            <div class="april_2block_bottum_left col-lg-6">
+
+            </div>
+            <div class="april_2block_bottum_right col-lg-6">
+
+            </div>
+
+        </div>
+
+        <div class="april_stay d-flex justify-content-center align-items-center">
+            <div class="april_stay_tile">
+                <h5>待夜幕低垂，滿天星子之下，點點螢光熠熠飛舞。</h5>
+            </div>
+        </div>
+
+        <div class="april_party d-flex justify-content-center align-items-center">
+            <div class="april_party_content">
+                <h3>We invite you to join the spring party.</h3>
+            </div>
+
+        </div>
+
+        <div class="april_snow ">
+            <div class="april_snow_content container">
+                <h4>從雪地走入星空，<br>
+                    聽聽油桐花在台灣的身分轉變，<br>
+                    聽聽螢火蟲的故事，<br>
+                    享受最令人期待的螢河之旅。</h4>
+
+            </div>
+            <div class="april_snow_button">
+
+            </div>
+        </div>
     </main>
 
+    <div class="footer d-flex justify-content-center align-items-center">
+        <div class="footer_content">Team4 © for educational purposes only</div>
 
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
