--- a/當季活動/index.html
+++ b/當季活動/index.html
@@ -32,7 +32,7 @@
         <div class="april_woods container">
             <div class="april_woods_middle col-lg-6 col-md-6 col-6 m-auto">
             </div>
-            <div class="april_woods_left col-lg-4 col-md-4 col-4">
+            <div class="april_woods_left col-lg-4 col-md-4 col-2">
             </div>
             <div class="april_woods_square col-md-3 col-3">
             </div>
@@ -136,7 +136,7 @@
         </div>
 
         <div class="april_snow ">
-            <div class="april_snow_content container">
+            <div class="april_snow_content container col-10">
                 <h4>從雪地走入星空，<br>
                     聽聽油桐花在台灣的身分轉變，<br>
                     聽聽螢火蟲的故事，<br>
