--- a/當季活動/index.html
+++ b/當季活動/index.html
@@ -21,12 +21,22 @@
 
         <!-- banner -->
         <div class="april_banner">
-            <div class="april_banner_content col-lg-12 ">
-                <div class="april_banner_text">
-                    <div class="april_banner_text_title text-center">森林螢光微旅</div>
-                    <div class="april_banner_text_subtitle">Snow and Stars</div>
+
+            <div class="april_banner_text">
+                <div class="april_banner_video">
+                    <video autoplay muted loop id="myVideo">
+                        <source src="./video/桐花.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="april_banner_text_subtitle">
+                    <h2>Snow and Stars</h2>
+                </div>
+                <div class="april_banner_text_title container">
+                    <h2>森林螢光微旅行</h2>
                 </div>
             </div>
+
+
         </div>
 
         <div class="april_woods container">
@@ -79,7 +89,7 @@
                         </div>
                     </div>
 
-                    
+
                 </div>
 
             </div>
