--- a/當季活動/當季活動_banner/activities.html
+++ b/當季活動/當季活動_banner/activities.html
@@ -14,15 +14,15 @@
 
     <div class="all">
 
-        <div class="activities_banner">
-            <div class="activities_banner_content container">
-                <p>森林螢光微旅行</p> 
-                
+        <div class="april_banner">
+            <div class="april_banner_content container">
+                <h2>森林螢光微旅行</h2>
+
             </div>
-            <div class="activities_banner_snow">
-                <p>Snow and Stars</p>
+            <div class="april_banner_snow">
+                <h2>Snow and Stars</h2>
             </div>
-            
+
         </div>
 
 
