--- a/園區介紹/index.html
+++ b/園區介紹/index.html
@@ -7,7 +7,9 @@
   <title>garden</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="./css/garden.css" />
+
 </head>
 
 <body>
@@ -60,10 +62,10 @@
 
       <div class="garden_about ">
         <h3
-          class="garden_about_title d-flex justify-content-center align-items-center align-self-center text-center text-black  ">
+          class="garden_about_title d-flex justify-content-center align-items-center align-self-center text-center text-black">
           About</h3>
-        <div class="garden_about_img ">
-          <img style="width: 100%;" src="https://picsum.photos/1000/500?random=2" alt="">
+        <div class="garden_about_img" data-aos="fade-up" data-aos-duration="2000">
+          <img style="width: 100%;" src="./img/garden_01.jpg" alt="">
         </div>
         <div class="garden_about_text">
           <h3 class="garden_about_textup">廣袤視野</h3>
@@ -79,8 +81,8 @@
       <!-- garden_view -->
       <div class="garden_view">
         <div class="garden_view_cloud garden_view_box row">
-          <div class="order-md-2 order-1 col-lg-6 col-md-6 col-12 ">
-            <img width="100%" src="https://picsum.photos/1000/800?random=1" alt="">
+          <div class="order-md-2 order-1 col-lg-6 col-md-6 col-12 " data-aos="fade-left"  data-aos-duration="2000">
+            <img width="100%" src="./img/garden_02.jpg" alt="">
           </div>
           <div class="garden_view_text order-md-1 order-2 col-lg-6 col-md-6 col-12 align-self-center">
             <h3>雲海山間</h3>
@@ -90,8 +92,8 @@
           </div>
         </div>
         <div class="garden_view_mountain garden_view_box row">
-          <div class="order-md-1 order-1 col-lg-6 col-md-6 col-12">
-            <img width="100%" src="https://picsum.photos/1000/800?random=2" alt="">
+          <div class="order-md-1 order-1 col-lg-6 col-md-6 col-12" data-aos="fade-right"  data-aos-duration="2000">
+            <img width="100%" src="./img/garden_03.jpg" alt="">
           </div>
           <div class="garden_view_text order-md-2 order-2  col-md-6 col-12 align-self-center">
             <h3>山林景緻</h3>
@@ -103,8 +105,8 @@
 
         </div>
         <div class="garden_view_season garden_view_box row">
-          <div class="order-md-2 order-1  col-lg-6 col-md-6 col-12">
-            <img width="100%" src="https://picsum.photos/1000/800?random=3" alt="">
+          <div class="order-md-2 order-1  col-lg-6 col-md-6 col-12" data-aos="fade-left" data-aos-duration="2000">
+            <img width="100%" src="./img/garden_04.jpg" alt="">
           </div>
           <div class="garden_view_text order-md-1 order-2 col-lg-6 col-md-6 col-12 align-self-center">
             <h3>四季花海</h3>
@@ -117,8 +119,8 @@
 
         </div>
         <div class="garden_purpos garden_view_box row">
-          <div class="garden_purpos_img d-block d-md-none ">
-            <img width="100%" src="https://picsum.photos/1000/800?random=3" alt="">
+          <div class="garden_purpos_img d-block d-md-none " data-aos="fade-up" data-aos-duration="2000">
+            <img width="100%" src="./img/garden_05.jpg" alt="">
           </div>
           <div class="garden_purpos_text align-self-center">
             <p>農場設立的宗旨，除了分享美好的景色事物外，更希望能成為繁忙都市人心中的一片淨土，讓生活在鋼筋叢林中的都市人能遠離塵囂，放鬆心情、洗淨心靈的疲憊，特命名為”沐心泉”。　
@@ -136,8 +138,8 @@
           <h3>花間步道</h3>
 
         </div>
-        <div class="garden_walks_img col-lg-6 col-md-6 order-md-0 m-auto ">
-          <img width="100%" src="https://picsum.photos/1000/800?random=5" alt="">
+        <div class="garden_walks_img col-lg-8 col-md-8 order-md-0 m-auto" data-aos="fade-up" data-aos-duration="2000">
+          <img width="100%" src="./img/garden_06.jpg" alt="">
         </div>
 
       </div>
@@ -166,13 +168,13 @@
           </div>
         </div>
         <div class="garden_info_card row ">
-          <div class="garden_info_card_dining col-lg-6 col-md-6 col-12">
-            <img width="100%" src="https://picsum.photos/1000/800?random=4" alt="">
+          <div class="garden_info_card_dining col-lg-6 col-md-6 col-12" data-aos="fade-left" data-aos-duration="2000">
+            <img width="100%" src="./img/garden_07.jpg" alt="">
             <h3 class="garden_info_card_text text-center">餐 廳</h3>
             <p class="mt-2 p-2 cardC_txt ">新社美食遠近馳名，其中又以新社沐心泉休閒農場附設餐廳部最為知名。
               <br><br>
               餐廳主人為您預備了精心烹飪的餐點，新鮮的食材，在山林之中和著鳥叫聲的清脆，絕佳的景色與氣氛，在群山環花包圍下，將新社的山、新社的水，新社最美的景色呈現在您眼前。</p>
-            <div class="garden_info_card_button text-center d-block d-md-none">
+            <div class="garden_info_card_button text-center d-block d-md-none" >
               <a href="#">
                 <button type="button" class="btn btn-outline-primary">
                   <h3>了解更多</h3>
@@ -181,8 +183,8 @@
             </div>
           </div>
 
-          <div class="garden_info_card_Camp col-lg-6 col-md-6 col-12">
-            <img width="100%" src="https://picsum.photos/1000/800?random=3" alt="">
+          <div class="garden_info_card_Camp col-lg-6 col-md-6 col-12" data-aos="fade-right" data-aos-duration="2000">
+            <img width="100%" src="./img/garden_08.jpg" alt="">
             <h3 class="garden_info_card_text text-center">露營區</h3>
             <p class="mt-2 p-2 cardC_txt ">Lorem ipsum dolor sit amet consectetur
               天然美景，入秋露營的好去處，在大自然裡享受露營的樂趣；山嵐飄渺、壯麗雲海、迷醉的夕陽景色，彷彿置身魔幻仙境的感受！
@@ -205,22 +207,22 @@
           </div>
           <div class="garden_info_dining_img row">
             <div class="garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
-              <img src="https://picsum.photos/150/150?random=6" alt="">
+              <img src="./img/garden_09.jpg" alt="">
+            </div>
+            <div class=" garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
+              <img src=" ./img/garden_10.jpg" alt="">
             </div>
             <div class="garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
-              <img src="https://picsum.photos/150/150?random=7" alt="">
+              <img src="./img/garden_11.jpg" alt="">
+            </div>
+            <div class=" garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
+              <img src=" ./img/garden_12.jpg" alt="">
             </div>
             <div class="garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
-              <img src="https://picsum.photos/150/150?random=8" alt="">
+              <img src="./img/garden_13.jpg" alt="">
             </div>
             <div class="garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
-              <img src="https://picsum.photos/150/150?random=9" alt="">
-            </div>
-            <div class="garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
-              <img src="https://picsum.photos/150/150?random=10" alt="">
-            </div>
-            <div class="garden_info_dining_img_n col-lg-2 col-md-4 col-4 ">
-              <img src="https://picsum.photos/150/150?random=11" alt="">
+              <img src="./img/garden_14.jpg" alt="">
             </div>
           </div>
 
@@ -241,7 +243,7 @@
 
 
 
-
+  <!-- bootstrap -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
@@ -251,6 +253,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <!-- aos.js -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
